fixed mobile spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,5 +166,12 @@ main {
     display: block;
   }
 
+  .big-title {
+    font-size: 24px;
+  }
+
+  .button {
+    margin: 0 2px;
+  }
 
 }
